Edited contact page text and fixed alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,18 +148,16 @@ img {
 }
 
 .contact-text-1 {
-    width: 20%;
+    width: 200px;
     display: inline-block;
     text-align: center;
-    padding-right: 10px;
     vertical-align: text-top;
 }
 
 .contact-text-2 {
-    width: 20%;
+    width: 200px;
     display: inline-block;
     text-align: center;
-    padding-left: 10px;
     vertical-align: text-top;
 }
 
@@ -232,7 +230,7 @@ a:active {
 
 /* ---------------------------------------------Media Queries*/
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
 
 .nav-container {
     width: 20%;
@@ -292,16 +290,12 @@ section {
 }
 
 .contact-text-1 {
-    width: 100%;
-    padding-right: 0px;
     display: block;
     display: flex;
     justify-content: center;
 }
 
 .contact-text-2 {
-    width: 100%;
-    padding-left: 0px;
     display: block;
     display: flex;
     justify-content: center;
@@ -320,7 +314,7 @@ section {
 
 }
 
-@media (max-width: 800px) and (min-width: 401px) {
+@media (max-width: 800px) and (min-width: 420px) {
 
 .nav-container {
     width: 100%;
@@ -362,8 +356,6 @@ section {
 }
 
 .contact-text-1 {
-    width: 100%;
-    padding-right: 0px;
     display: block;
     display: flex;
     justify-content: center;
@@ -371,8 +363,6 @@ section {
 }
 
 .contact-text-2 {
-    width: 100%;
-    padding-left: 0px;
     display: block;
     display: flex;
     justify-content: center;
